dnl	$Id: configure.in,v 1.4 1997/03/22 02:54:09 eric Rel $	
dnl Process this file with autoconf to produce a configure script.
AC_INIT(mkisofs.c)
AC_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_CONST
AC_HEADER_MAJOR
AC_HEADER_DIRENT
if test -z "$ac_header_dirent"; then
  AC_DEFINE(NODIR)
fi
AC_CHECK_FUNCS(memmove sbrk)
AC_CHECK_HEADERS(sys/mkdev.h sys/sysmacros.h malloc.h termios.h sys/types.h)
AC_CHECK_HEADERS(unistd.h)
AC_PROG_INSTALL
AC_OUTPUT(Makefile diag/Makefile)
